2011-03-10  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Jon Honeycutt.

        WebKit2 UI process crashes if web process crashes while computing page rects for printing
        https://bugs.webkit.org/show_bug.cgi?id=56160
        <rdar://problem/9027410>

        * UIProcess/API/mac/WKPrintingView.mm:
        (-[WKPrintingView _suspendAutodisplay]): Added a null check for page, matching one that
        we have when resuming autodisplay.
        (-[WKPrintingView _delayedResumeAutodisplayTimerFired]): Added a FIXME.
        (pageDidComputePageRects): Sanitize results coming from the web process (and avoid crashing
        when there is a communication error, so results are all null).
        (-[WKPrintingView knowsPageRange:]): If there is no page any more, we can't tell how many
        pages it had.
        (-[WKPrintingView rectForPage:]): Handle the case where we are neither calculating pages
        nor knowing them, as it happens when the web process crashes.        

2011-03-10  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Sam Weinig.

        Part of <rdar://problem/8728860> WebKit2 needs to be made localizable

        The presence of CFBundleDevelopmentRegion in the application's Info.plist prevents
        the default localization that we set during launch from being respected.

        * PluginProcess/Info.plist: Remove CFBundleDevelopmentRegion.
        * WebProcess/Info.plist: Ditto.

2011-03-10  Martin Robinson  <mrobinson@igalia.com>

        Build for WebKit2 GTK+ after r80714.

        * GNUmakefile.am: Update source list.
        * WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp: 
        (WebKit::x11Display): Add missing semicolon.

2011-03-10  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (WebKit2): VoiceOver focus no longer follows keyboard focus
        https://bugs.webkit.org/show_bug.cgi?id=55959
